=======================================================================
                  SIESTA CHANGES: TOP IS MOST RECENT
=======================================================================


** CHANGES ALONG trunk

-----------------------------------------------------------------------
2012-03-06  15:15:00 GMT Alberto Garcia <albertog@icmab.es>   trunk-403
Allow monitoring of forces during SCF cycle

Using the fdf symbol

MonitorForcesInSCF T

the program will compute the forces and stresses at every scf step. 
Use in combination with WriteForces.

modified:
  Src/Makefile
  Src/siesta_forces.F
  Src/siesta_options.F90

-----------------------------------------------------------------------
2012-02-23  9:40:00 GMT Alberto Garcia <albertog@icmab.es>   trunk-402
Update of Andrei Postnikov's utilities to V0.4

Added also the fmpdos program, an alternative to pdosxml.

added:
  Util/Contrib/APostnikov/00README
  Util/Contrib/APostnikov/fmpdos.f
  Util/Contrib/APostnikov/test_mdc.f
modified:
  Util/Contrib/APostnikov/Makefile
  Util/Contrib/APostnikov/README
  Util/Contrib/APostnikov/eig2bxsf.f
  Util/Contrib/APostnikov/md2axsf.f
  Util/Contrib/APostnikov/rho2xsf.f
  Util/Contrib/APostnikov/vib2xsf.f
  Util/Contrib/APostnikov/wraxsf1.f
  Util/Contrib/APostnikov/wraxsf2.f

-----------------------------------------------------------------------
2012-02-22  13:50:00 GMT Alberto Garcia <albertog@icmab.es>   trunk-401
Assorted cosmetic and compilation fixes

* Include missing LDFLAGS symbol in some Util makefiles

modified:
  Util/COOP/Makefile
  Util/Contrib/APostnikov/Makefile
  Util/test-xml/makefile

* Obsolete debug information was still being written to unit 23 in
  domain_decom, including a call to "flush".
  
modified:
  Src/domain_decom.F

* Fix makefile symbols in Util/STM/ol-stm
  The new domain_decomposition symbols and dependencies were missing.

modified:
  Util/STM/ol-stm/Src/Makefile

* Updated bug reporting guidelines

added:
  Docs/REPORTING_BUGS