@@ -6,6 +6,17 @@
 ** CHANGES ALONG trunk
 
 -----------------------------------------------------------------------
+2012-03-07  14:25:00 GMT Alberto Garcia <albertog@icmab.es>   trunk-404
+Add force convergence diagnostic
+
+When the option to monitor the forces during the SCF cycle is in effect, the
+program will print the maximum absolute value of the change in forces from one
+step to the next. Other statistics could be implemented.
+
+modified:
+  Src/siesta_forces.F
+
+-----------------------------------------------------------------------
 2012-03-06  15:15:00 GMT Alberto Garcia <albertog@icmab.es>   trunk-403
 Allow monitoring of forces during SCF cycle
 
